# yvideos

./: .env.example  .gitignore  pyproject.toml
core/: settings.py  urls.py
templates/: base.html
videos/: forms.py  models.py  validators.py  views.py
videos/migrations/: 0001_initial.py
videos/templates/: video_create.html  video_detail.html  video_list.html
